[RPP] Fix calibration process broken due to minification
Also adds an e2e test.

Bug: 311438112
Change-Id: If2fe107ac83ba631e3f642ae7a08ae2c38575227
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6191409
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -48,6 +48,7 @@ node_ts_library("tests") {
     "snippets",
     "sources",
     "targets",
+    "throttling",
     "webaudio",
   ]
   sources = [ "mocharc.ts" ]
