--- a/.vscode/devtools-workspace-settings.json
+++ b/.vscode/devtools-workspace-settings.json
@@ -1,9 +1,7 @@
 {
-  "eslint.runtime": "third_party/node/node.py",
+  "eslint.runtime": "$PATHED by scripts/deps/sync-vscode-settings.mjs",
   "typescript.tsdk": "node_modules/typescript/lib",
   "debug.javascript.terminalOptions": {
-    "skipFiles": [
-      "node_modules/typescript/**"
-    ]
+    "skipFiles": ["node_modules/typescript/**"]
   }
 }
