Remove `registerRequiredCSS` from `Widget` and `GlassPane`.
This removes a bunch of `.legacy.css.js` files.

Drive-by-fix: Deduplicate style sheets in `Widget.registerCSSFiles`.

Bug: 391381439
Change-Id: Ia04c4187b32ede5f0416d39552be7201f5be4cbb
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6189464
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1432,9 +1432,9 @@ grd_files_debug_sources = [
   "front_end/panels/emulation/MediaQueryInspector.js",
   "front_end/panels/emulation/components/DeviceSizeInputElement.js",
   "front_end/panels/emulation/deviceModeToolbar.css.legacy.js",
-  "front_end/panels/emulation/deviceModeView.css.legacy.js",
-  "front_end/panels/emulation/inspectedPagePlaceholder.css.legacy.js",
-  "front_end/panels/emulation/mediaQueryInspector.css.legacy.js",
+  "front_end/panels/emulation/deviceModeView.css.js",
+  "front_end/panels/emulation/inspectedPagePlaceholder.css.js",
+  "front_end/panels/emulation/mediaQueryInspector.css.js",
   "front_end/panels/event_listeners/EventListenersUtils.js",
   "front_end/panels/event_listeners/EventListenersView.js",
   "front_end/panels/event_listeners/eventListenersView.css.js",
@@ -2225,7 +2225,6 @@ grd_files_debug_sources = [
   "front_end/ui/components/floating_button/floatingButton.css.js",
   "front_end/ui/components/helpers/component-server-setup.js",
   "front_end/ui/components/helpers/directives.js",
-  "front_end/ui/components/helpers/get-root-node.js",
   "front_end/ui/components/helpers/scheduled-render.js",
   "front_end/ui/components/highlighting/HighlightManager.js",
   "front_end/ui/components/highlighting/highlighting.css.js",
@@ -2434,9 +2433,9 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/perf_ui/TimelineGrid.js",
   "front_end/ui/legacy/components/perf_ui/TimelineOverviewCalculator.js",
   "front_end/ui/legacy/components/perf_ui/TimelineOverviewPane.js",
-  "front_end/ui/legacy/components/perf_ui/chartViewport.css.legacy.js",
-  "front_end/ui/legacy/components/perf_ui/filmStripView.css.legacy.js",
-  "front_end/ui/legacy/components/perf_ui/flameChart.css.legacy.js",
+  "front_end/ui/legacy/components/perf_ui/chartViewport.css.js",
+  "front_end/ui/legacy/components/perf_ui/filmStripView.css.js",
+  "front_end/ui/legacy/components/perf_ui/flameChart.css.js",
   "front_end/ui/legacy/components/perf_ui/overviewGrid.css.legacy.js",
   "front_end/ui/legacy/components/perf_ui/pieChart.css.js",
   "front_end/ui/legacy/components/perf_ui/timelineGrid.css.legacy.js",
@@ -2455,13 +2454,13 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/source_frame/SourceFrame.js",
   "front_end/ui/legacy/components/source_frame/StreamingContentHexView.js",
   "front_end/ui/legacy/components/source_frame/XMLView.js",
-  "front_end/ui/legacy/components/source_frame/fontView.css.legacy.js",
-  "front_end/ui/legacy/components/source_frame/imageView.css.legacy.js",
-  "front_end/ui/legacy/components/source_frame/jsonView.css.legacy.js",
-  "front_end/ui/legacy/components/source_frame/resourceSourceFrame.css.legacy.js",
+  "front_end/ui/legacy/components/source_frame/fontView.css.js",
+  "front_end/ui/legacy/components/source_frame/imageView.css.js",
+  "front_end/ui/legacy/components/source_frame/jsonView.css.js",
+  "front_end/ui/legacy/components/source_frame/resourceSourceFrame.css.js",
   "front_end/ui/legacy/components/source_frame/selfXssDialog.css.legacy.js",
   "front_end/ui/legacy/components/source_frame/xmlTree.css.legacy.js",
-  "front_end/ui/legacy/components/source_frame/xmlView.css.legacy.js",
+  "front_end/ui/legacy/components/source_frame/xmlView.css.js",
   "front_end/ui/legacy/components/utils/ImagePreview.js",
   "front_end/ui/legacy/components/utils/JSPresentationUtils.js",
   "front_end/ui/legacy/components/utils/Linkifier.js",
@@ -2470,37 +2469,36 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/utils/imagePreview.css.js",
   "front_end/ui/legacy/components/utils/jsUtils.css.js",
   "front_end/ui/legacy/confirmDialog.css.legacy.js",
-  "front_end/ui/legacy/dialog.css.legacy.js",
+  "front_end/ui/legacy/dialog.css.js",
   "front_end/ui/legacy/dropTarget.css.legacy.js",
   "front_end/ui/legacy/emptyWidget.css.js",
-  "front_end/ui/legacy/emptyWidget.css.legacy.js",
-  "front_end/ui/legacy/filter.css.legacy.js",
-  "front_end/ui/legacy/glassPane.css.legacy.js",
+  "front_end/ui/legacy/filter.css.js",
+  "front_end/ui/legacy/glassPane.css.js",
   "front_end/ui/legacy/infobar.css.legacy.js",
   "front_end/ui/legacy/inlineButton.css.legacy.js",
   "front_end/ui/legacy/inspectorCommon.css.js",
   "front_end/ui/legacy/inspectorCommon.css.legacy.js",
-  "front_end/ui/legacy/inspectorViewTabbedPane.css.legacy.js",
-  "front_end/ui/legacy/listWidget.css.legacy.js",
-  "front_end/ui/legacy/popover.css.legacy.js",
+  "front_end/ui/legacy/inspectorViewTabbedPane.css.js",
+  "front_end/ui/legacy/listWidget.css.js",
+  "front_end/ui/legacy/popover.css.js",
   "front_end/ui/legacy/progressIndicator.css.legacy.js",
-  "front_end/ui/legacy/remoteDebuggingTerminatedScreen.css.legacy.js",
-  "front_end/ui/legacy/reportView.css.legacy.js",
-  "front_end/ui/legacy/rootView.css.legacy.js",
-  "front_end/ui/legacy/searchableView.css.legacy.js",
+  "front_end/ui/legacy/remoteDebuggingTerminatedScreen.css.js",
+  "front_end/ui/legacy/reportView.css.js",
+  "front_end/ui/legacy/rootView.css.js",
+  "front_end/ui/legacy/searchableView.css.js",
   "front_end/ui/legacy/smallBubble.css.legacy.js",
-  "front_end/ui/legacy/softContextMenu.css.legacy.js",
+  "front_end/ui/legacy/softContextMenu.css.js",
   "front_end/ui/legacy/softDropDown.css.legacy.js",
   "front_end/ui/legacy/softDropDownButton.css.legacy.js",
-  "front_end/ui/legacy/splitWidget.css.legacy.js",
+  "front_end/ui/legacy/splitWidget.css.js",
   "front_end/ui/legacy/suggestBox.css.legacy.js",
-  "front_end/ui/legacy/tabbedPane.css.legacy.js",
-  "front_end/ui/legacy/targetCrashedScreen.css.legacy.js",
+  "front_end/ui/legacy/tabbedPane.css.js",
+  "front_end/ui/legacy/targetCrashedScreen.css.js",
   "front_end/ui/legacy/textPrompt.css.legacy.js",
   "front_end/ui/legacy/theme_support/ThemeSupport.js",
   "front_end/ui/legacy/toolbar.css.js",
   "front_end/ui/legacy/treeoutline.css.legacy.js",
-  "front_end/ui/legacy/viewContainers.css.legacy.js",
+  "front_end/ui/legacy/viewContainers.css.js",
   "front_end/ui/lit-html/i18n-template.js",
   "front_end/ui/visual_logging/Debugging.js",
   "front_end/ui/visual_logging/DomState.js",
