--- a/front_end/ui/legacy/components/source_frame/BUILD.gn
+++ b/front_end/ui/legacy/components/source_frame/BUILD.gn
@@ -8,15 +8,20 @@ import("../../../../../scripts/build/ninja/generate_css.gni")
 import("../../../../../scripts/build/typescript/typescript.gni")
 import("../../visibility.gni")
 
-generate_css("legacy_css_files") {
+generate_css("css_files") {
   sources = [
     "fontView.css",
     "imageView.css",
     "jsonView.css",
     "resourceSourceFrame.css",
+    "xmlView.css",
+  ]
+}
+
+generate_css("legacy_css_files") {
+  sources = [
     "selfXssDialog.css",
     "xmlTree.css",
-    "xmlView.css",
   ]
 
   legacy = true
@@ -56,6 +61,7 @@ devtools_entrypoint("bundle") {
   entrypoint = "source_frame.ts"
 
   deps = [
+    ":css_files",
     ":legacy_css_files",
     ":source_frame",
   ]
