[RPP Insight] Add some skeleton code for long critical network tree insight
This CL adds the skeleton code for the insight model and insight
component, it doesn't have any functionality, just the code compiles
successfully. Also this insight will be behind the flag.

Bug: 372897712
Change-Id: I0c234b7f7eee0144df729ce4b0eab524b0eefc32
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6179489
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -17,6 +17,7 @@ devtools_module("insights") {
     "InteractionToNextPaint.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
+    "LongCriticalNetworkTree.ts",
     "Models.ts",
     "RenderBlocking.ts",
     "SlowCSSSelector.ts",
