--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -201,6 +201,7 @@ ts_library("unittests") {
     "TimelineHistoryManager.test.ts",
     "TimelineLoader.test.ts",
     "TimelineMiniMap.test.ts",
+    "TimelinePanel.test.ts",
     "TimelineSelection.test.ts",
     "TimelineTreeView.test.ts",
     "TimelineUIUtils.test.ts",
