[Console Insights] Reuse AI assistance's header logic
Bug: none
Change-Id: Ib59c9ea7223b1d091ec084ea50211ebad69c6b30
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6194052
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/ai_assistance/BUILD.gn
+++ b/front_end/panels/ai_assistance/BUILD.gn
@@ -68,6 +68,7 @@ devtools_entrypoint("bundle") {
     "../../../test/interactions/*",
     "../../entrypoints/*",
     "../../ui/components/docs/ai_assistance/*",
+    "../explain",
   ]
 
   visibility += devtools_panels_visibility
