--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -34,6 +34,7 @@ devtools_module("explain") {
     "../../ui/components/spinners:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/source_frame:bundle",
+    "../ai_assistance:bundle",
     "../console:bundle",
     "../sources:bundle",
   ]
