[RPP] Add forced reflow insight
This insight displays the most time-consuming function calls resulting
in forced reflows along with related bottom-up stack trace data.

Screenshot: https://imgur.com/a/qwBByxH

Bug:369766156
Change-Id: I7b0256a97519c242c45008ccfafcde2839cadc98
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5894042
Commit-Queue: Yanling Wang <yanlingwang@microsoft.com>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("insights") {
     "DOMSize.ts",
     "DocumentLatency.ts",
     "FontDisplay.ts",
+    "ForcedReflow.ts",
     "ImageDelivery.ts",
     "InteractionToNextPaint.ts",
     "LCPDiscovery.ts",
@@ -55,6 +56,7 @@ ts_library("unittests") {
     "DOMSize.test.ts",
     "DocumentLatency.test.ts",
     "FontDisplay.test.ts",
+    "ForcedReflow.test.ts",
     "ImageDelivery.test.ts",
     "InteractionToNextPaint.test.ts",
     "LCPDiscovery.test.ts",
