--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1111,6 +1111,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/insights/DOMSize.js",
   "front_end/models/trace/insights/DocumentLatency.js",
   "front_end/models/trace/insights/FontDisplay.js",
+  "front_end/models/trace/insights/ForcedReflow.js",
   "front_end/models/trace/insights/ImageDelivery.js",
   "front_end/models/trace/insights/InteractionToNextPaint.js",
   "front_end/models/trace/insights/LCPDiscovery.js",
@@ -1865,6 +1866,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
   "front_end/panels/timeline/components/insights/EventRef.js",
   "front_end/panels/timeline/components/insights/FontDisplay.js",
+  "front_end/panels/timeline/components/insights/ForcedReflow.js",
   "front_end/panels/timeline/components/insights/Helpers.js",
   "front_end/panels/timeline/components/insights/ImageDelivery.js",
   "front_end/panels/timeline/components/insights/InteractionToNextPaint.js",
