--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -28,6 +28,7 @@ copy_to_gen("traces") {
     "fenced-frame-fledge.json.gz",
     "font-display.json.gz",
     "forced-layouts-and-no-gpu.json.gz",
+    "forced-reflow.json.gz",
     "generic-about-tracing.json.gz",
     "idle-callback.json.gz",
     "idle-tasks.json.gz",
