[RPP] Create Bottom-up tree button on 3P table hover
Bottom up tree button on 3P table clicks and directs to a filtered
bottom up tree. The tree is "GroupBy" Third Party and selects
and expands the related 3P

https://screencast.googleplex.com/cast/NTk4MTk5MzA5ODU0MzEwNHwxNjFjY2UxZC0wNw

Bug:None
Change-Id: I3b905f6e72749ebd7ab0e3eb401c4b0879392863
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6171828
Auto-Submit: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -20,6 +20,7 @@ grd_files_release_sources = [
   "front_end/Images/accelerometer-left.png",
   "front_end/Images/accelerometer-right.png",
   "front_end/Images/accelerometer-top.png",
+  "front_end/Images/account-tree.svg",
   "front_end/Images/align-content-center.svg",
   "front_end/Images/align-content-end.svg",
   "front_end/Images/align-content-space-around.svg",
