[cleanup] Migrate another chunk of legacy CSS files.
Bug: 391381439
Change-Id: I4de7afe8a5ebac7c86d0a00ce2e26b6b9d22a493
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6196956
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2362,7 +2362,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/XLink.js",
   "front_end/ui/legacy/XWidget.js",
   "front_end/ui/legacy/ZoomManager.js",
-  "front_end/ui/legacy/checkboxTextLabel.css.legacy.js",
+  "front_end/ui/legacy/checkboxTextLabel.css.js",
   "front_end/ui/legacy/components/color_picker/ColorFormatSpec.js",
   "front_end/ui/legacy/components/color_picker/ContrastDetails.js",
   "front_end/ui/legacy/components/color_picker/ContrastInfo.js",
@@ -2459,8 +2459,8 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/source_frame/imageView.css.js",
   "front_end/ui/legacy/components/source_frame/jsonView.css.js",
   "front_end/ui/legacy/components/source_frame/resourceSourceFrame.css.js",
-  "front_end/ui/legacy/components/source_frame/selfXssDialog.css.legacy.js",
-  "front_end/ui/legacy/components/source_frame/xmlTree.css.legacy.js",
+  "front_end/ui/legacy/components/source_frame/selfXssDialog.css.js",
+  "front_end/ui/legacy/components/source_frame/xmlTree.css.js",
   "front_end/ui/legacy/components/source_frame/xmlView.css.js",
   "front_end/ui/legacy/components/utils/ImagePreview.js",
   "front_end/ui/legacy/components/utils/JSPresentationUtils.js",
@@ -2469,36 +2469,36 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/utils/TargetDetachedDialog.js",
   "front_end/ui/legacy/components/utils/imagePreview.css.js",
   "front_end/ui/legacy/components/utils/jsUtils.css.js",
-  "front_end/ui/legacy/confirmDialog.css.legacy.js",
+  "front_end/ui/legacy/confirmDialog.css.js",
   "front_end/ui/legacy/dialog.css.js",
-  "front_end/ui/legacy/dropTarget.css.legacy.js",
+  "front_end/ui/legacy/dropTarget.css.js",
   "front_end/ui/legacy/emptyWidget.css.js",
   "front_end/ui/legacy/filter.css.js",
   "front_end/ui/legacy/glassPane.css.js",
-  "front_end/ui/legacy/infobar.css.legacy.js",
-  "front_end/ui/legacy/inlineButton.css.legacy.js",
+  "front_end/ui/legacy/infobar.css.js",
+  "front_end/ui/legacy/inlineButton.css.js",
   "front_end/ui/legacy/inspectorCommon.css.js",
   "front_end/ui/legacy/inspectorCommon.css.legacy.js",
   "front_end/ui/legacy/inspectorViewTabbedPane.css.js",
   "front_end/ui/legacy/listWidget.css.js",
   "front_end/ui/legacy/popover.css.js",
-  "front_end/ui/legacy/progressIndicator.css.legacy.js",
+  "front_end/ui/legacy/progressIndicator.css.js",
   "front_end/ui/legacy/remoteDebuggingTerminatedScreen.css.js",
   "front_end/ui/legacy/reportView.css.js",
   "front_end/ui/legacy/rootView.css.js",
   "front_end/ui/legacy/searchableView.css.js",
-  "front_end/ui/legacy/smallBubble.css.legacy.js",
+  "front_end/ui/legacy/smallBubble.css.js",
   "front_end/ui/legacy/softContextMenu.css.js",
-  "front_end/ui/legacy/softDropDown.css.legacy.js",
+  "front_end/ui/legacy/softDropDown.css.js",
   "front_end/ui/legacy/softDropDownButton.css.legacy.js",
   "front_end/ui/legacy/splitWidget.css.js",
-  "front_end/ui/legacy/suggestBox.css.legacy.js",
+  "front_end/ui/legacy/suggestBox.css.js",
   "front_end/ui/legacy/tabbedPane.css.js",
   "front_end/ui/legacy/targetCrashedScreen.css.js",
   "front_end/ui/legacy/textPrompt.css.legacy.js",
   "front_end/ui/legacy/theme_support/ThemeSupport.js",
   "front_end/ui/legacy/toolbar.css.js",
-  "front_end/ui/legacy/treeoutline.css.legacy.js",
+  "front_end/ui/legacy/treeoutline.css.js",
   "front_end/ui/legacy/viewContainers.css.js",
   "front_end/ui/lit-html/i18n-template.js",
   "front_end/ui/visual_logging/Debugging.js",
