Fix navigation to about:blank from chrome://flags/ links in controls tool
chrome:// urls do not work with the regular <x-link> tag. Instead, use
the <devtools-chrome-link> tag.

Bug: b/392073142, b/365737493
Change-Id: Ie1e8f0d6ea10206ad31f117d1bed9914a8bfd8f5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6202681
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Commit-Queue: Jalon Thomas <jalonthomas@google.com>

--- a/front_end/panels/security/BUILD.gn
+++ b/front_end/panels/security/BUILD.gn
@@ -42,6 +42,7 @@ devtools_module("security") {
     "../../panels/network/forward:bundle",
     "../../ui/components/buttons:bundle",
     "../../ui/components/cards:bundle",
+    "../../ui/components/chrome_link:bundle",
     "../../ui/components/switch:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/data_grid:bundle",
