[cleanup] Rename theme_colors.css and application_color_tokens.css
This renames these two files to better reflect the current content:

theme_colors -> design_system_tokens
application_color_tokens -> application_tokens

Bug: 390330089
Change-Id: Iceac9fc91fb774912236715643f831caad035ed2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6205768
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -35,9 +35,9 @@ group("front_end") {
 
 copy_to_gen("integration_test_runner-gen") {
   sources = [
-    "application_color_tokens.css",
+    "application_tokens.css",
+    "design_system_tokens.css",
     "integration_test_runner.html",
-    "theme_colors.css",
   ]
 }
 
