[GM3Restyling] Update Accessibility tree outline view
Screenshot: https://imgur.com/a/8xmNm2K

Bug: 325443114
Change-Id: I5f5772ff83fdf75e462585e50d3d52df52f17342
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6211897
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -39,9 +39,11 @@ grd_files_release_sources = [
   "front_end/Images/align-self-stretch.svg",
   "front_end/Images/animation.svg",
   "front_end/Images/arrow-back.svg",
+  "front_end/Images/arrow-collapse.svg",
   "front_end/Images/arrow-down.svg",
   "front_end/Images/arrow-drop-down-dark.svg",
   "front_end/Images/arrow-drop-down-light.svg",
+  "front_end/Images/arrow-drop-down.svg",
   "front_end/Images/arrow-forward.svg",
   "front_end/Images/arrow-right-circle.svg",
   "front_end/Images/arrow-up-down-circle.svg",
