--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -45,9 +45,11 @@ devtools_svg_sources = [
   "align-self-stretch.svg",
   "animation.svg",
   "arrow-back.svg",
+  "arrow-collapse.svg",
   "arrow-down.svg",
   "arrow-drop-down-dark.svg",
   "arrow-drop-down-light.svg",
+  "arrow-drop-down.svg",
   "arrow-forward.svg",
   "arrow-right-circle.svg",
   "arrow-up-down-circle.svg",
