[Lit] Enable no-unclosed-tag rule
Currently the rule is marked as warn and will not make the presubmit
fail. Considering that it is an warning turn it to an error
to catch it early.

Bug: none
Change-Id: I9603130ac308aad2092300e22fe70b27ac7d5256
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6213830
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "rules": {
           "no-complex-attribute-binding": "off",
           "no-missing-import": "error",
-          "no-unknown-tag-name": "error"
+          "no-unknown-tag-name": "error",
+          "no-unclosed-tag": "error"
         }
       }
     ]
