[lint] Improvements and fixes to linting
Rerun all files if `lit-analyzer` rules change. Add support for EsLint
cache - `npm run lint` delta first run vs second of over 2 min. Don't
run EsLint if all files are ignored.

Bug: none
Change-Id: I042ede01cf0fe6de63b066723e1dc61cae3f9dcc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6213930
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ test/perf/.generated
 /.vscode/settings.json
 /.vscode/tasks.json
 /.vscode/launch.json
+
+# Linters caches
+.eslintcache
+.stylelintcache
