[css] Move property matchers to SDK
This will allow us to store match results on CSSProperty in a followup
CL, making it much easier to access CSS value information throughout
the codebase.

Bug: 373554278
Change-Id: Ic7429c1c21ce7b261f7abdef3da29b5001c86a97
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218246
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -22,6 +22,7 @@ devtools_module("sdk") {
     "CSSModel.ts",
     "CSSProperty.ts",
     "CSSPropertyParser.ts",
+    "CSSPropertyParserMatchers.ts",
     "CSSQuery.ts",
     "CSSRule.ts",
     "CSSScope.ts",
@@ -141,6 +142,7 @@ ts_library("unittests") {
     "CSSModel.test.ts",
     "CSSProperty.test.ts",
     "CSSPropertyParser.test.ts",
+    "CSSPropertyParserMatchers.test.ts",
     "CSSStyleDeclaration.test.ts",
     "CSSStyleSheetHeader.test.ts",
     "ChildTargetManager.test.ts",
