--- a/front_end/ui/legacy/components/data_grid/BUILD.gn
+++ b/front_end/ui/legacy/components/data_grid/BUILD.gn
@@ -40,6 +40,7 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "../../../../panels/application/*",
+    "../../../../panels/autofill/*",
     "../../../../panels/console/*",
     "../../../../panels/coverage/*",
     "../../../../panels/css_overview/*",
