[unified-css] Migrate `icon_button` component.
Now that we have an agreement on how to proceed with the CSS in the
front-end, migrate the `icon_button` component as the first guinea
pig, and remove the offending ESLint rule.

Bug: 391381439
Change-Id: Ie996db09fcf9dfc329206f62b136fad62583b730
Doc: https://goo.gle/devtools-unified-css-design
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6216261
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/icon_button/BUILD.gn
+++ b/front_end/ui/components/icon_button/BUILD.gn
@@ -11,12 +11,11 @@ import("../visibility.gni")
 generate_css("css_files") {
   sources = [
     "fileSourceIcon.css",
+    "icon.css",
     "iconButton.css",
   ]
-}
 
-generate_css("legacy_css_files") {
-  sources = [ "icon.css" ]
+  legacy = true
 }
 
 devtools_module("icon_button") {
@@ -38,7 +37,6 @@ devtools_entrypoint("bundle") {
   deps = [
     ":css_files",
     ":icon_button",
-    ":legacy_css_files",
   ]
 
   visibility = [
