--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2234,9 +2234,9 @@ grd_files_debug_sources = [
   "front_end/ui/components/icon_button/FileSourceIcon.js",
   "front_end/ui/components/icon_button/Icon.js",
   "front_end/ui/components/icon_button/IconButton.js",
-  "front_end/ui/components/icon_button/fileSourceIcon.css.js",
-  "front_end/ui/components/icon_button/icon.css.js",
-  "front_end/ui/components/icon_button/iconButton.css.js",
+  "front_end/ui/components/icon_button/fileSourceIcon.css.legacy.js",
+  "front_end/ui/components/icon_button/icon.css.legacy.js",
+  "front_end/ui/components/icon_button/iconButton.css.legacy.js",
   "front_end/ui/components/input/checkbox.css.js",
   "front_end/ui/components/input/textInput.css.js",
   "front_end/ui/components/issue_counter/IssueCounter.js",
