[unified-css] Reintroduce `registerRequiredCSS()`.
This basically reverts fe54dedba7dc5127430f57278e5675f7c7d1bfc8 and
887c6ad1dc0268d609c798ed655a5dc97216f1b1, following the decision to
consistently use `<style>` for CSS instead of Constructed Style Sheets.

Bug: 391381439
Change-Id: I0c4c91383292a25964f9f01ca4b22b1ad981c24e
Doc: https://goo.gle/devtools-unified-css-design
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6216262
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/emulation/BUILD.gn
+++ b/front_end/panels/emulation/BUILD.gn
@@ -14,6 +14,8 @@ generate_css("css_files") {
     "inspectedPagePlaceholder.css",
     "mediaQueryInspector.css",
   ]
+
+  legacy = true
 }
 
 devtools_module("emulation") {
