Use <devtools-new-data-grid> in TimelineSelectorStats
Bug: 390346490
Change-Id: Id9fea3853bcca6133341a4e5d6129cd6b7bdc6e3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6213831
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -45,6 +45,7 @@ generate_css("css_files") {
     "timelineMiniMap.css",
     "timelinePaintProfiler.css",
     "timelinePanel.css",
+    "timelineSelectorStatsView.css",
     "timelineStatusDialog.css",
   ]
 }
