--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1912,6 +1912,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/timelineMiniMap.css.js",
   "front_end/panels/timeline/timelinePaintProfiler.css.js",
   "front_end/panels/timeline/timelinePanel.css.js",
+  "front_end/panels/timeline/timelineSelectorStatsView.css.js",
   "front_end/panels/timeline/timelineStatusDialog.css.js",
   "front_end/panels/timeline/utils/AICallTree.js",
   "front_end/panels/timeline/utils/EntityMapper.js",
