--- a/front_end/entrypoints/inspector_main/BUILD.gn
+++ b/front_end/entrypoints/inspector_main/BUILD.gn
@@ -31,6 +31,7 @@ devtools_module("inspector_main") {
     "../../core/sdk:bundle",
     "../../generated:protocol",
     "../../panels/mobile_throttling:bundle",
+    "../../panels/security:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/utils:bundle",
