Remove ui/components/data_grid and new in the devtools-new-data-grid
Bug: 390346490
Change-Id: I6dd392e030b1077f437e298e7b00c150978a11e2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218251
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/legacy/components/data_grid/BUILD.gn
+++ b/front_end/ui/legacy/components/data_grid/BUILD.gn
@@ -39,18 +39,7 @@ devtools_entrypoint("bundle") {
 
   visibility = [
     ":*",
-    "../../../../panels/application/*",
-    "../../../../panels/autofill/*",
-    "../../../../panels/console/*",
-    "../../../../panels/coverage/*",
-    "../../../../panels/css_overview/*",
-    "../../../../panels/developer_resources/*",
-    "../../../../panels/media/*",
-    "../../../../panels/network/*",
-    "../../../../panels/profiler/*",
-    "../../../../panels/security/*",
-    "../../../../panels/timeline/*",
-    "../../../../panels/webauthn/*",
+    "../../../../panels/*",
     "../cookie_table/*",
   ]
 
