[AiAssistance] Render "Change Summary" expandable view behind a flag
Notes:
* It makes sense to add a new widget for the contents of this
component when we're implementing patching flow. For now, it's just a
`devtools-code-block` so I didn't create a new widget.
* For `ChangeManager`, I added an API to query the get formatted
changes via `agentId`.

Bug: 382746811
Change-Id: I7598495fc050ae7d4aa264c51a5935ff6bfbc635
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6217782
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -110,6 +110,7 @@ devtools_svg_sources = [
   "devtools-thumbnail.svg",
   "devtools-tips.svg",
   "devtools.svg",
+  "difference.svg",
   "dock-bottom.svg",
   "dock-left.svg",
   "dock-right.svg",
