--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -108,6 +108,7 @@ grd_files_release_sources = [
   "front_end/Images/devtools-thumbnail.svg",
   "front_end/Images/devtools-tips.svg",
   "front_end/Images/devtools.svg",
+  "front_end/Images/difference.svg",
   "front_end/Images/dock-bottom.svg",
   "front_end/Images/dock-left.svg",
   "front_end/Images/dock-right.svg",
