RPP: support new format screenshot events
Once crrev.com/c/6197645 lands the screenshot trace event will be
completely changed in terms of shape. This is to enable us to accurately
relate screenshots to animation frames. This CL does not do that work,
but instead does the work to update the trace engine types and the code
to be able to handle both screenshot events which are of different
shapes.

Bug: 390127829
Change-Id: Iad9e563977b772ed185ea98554ce5c72392f61ea
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6216264
Reviewed-by: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -110,6 +110,7 @@ copy_to_gen("traces") {
     "web-dev-initial-url.json.gz",
     "web-dev-modifications.json.gz",
     "web-dev-outermost-frames.json.gz",
+    "web-dev-screenshot-source-ids.json.gz",
     "web-dev-with-advanced-instrumentation.json.gz",
     "web-dev-with-commit.json.gz",
     "web-dev.json.gz",
