[DOMSize] Filter by pid on cross-origin navigations
DOM stats events can leak across cross-origin navigations because
the pages before and after the navigation will not share a process.

This CL prevents DOM stats from leaking by also checking for the
correct PID for insights related to a navigation.

Bug: None
Change-Id: I1df8e8451bcefbf6807a6e2d32cb22630ddf7505
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6219828
Commit-Queue: Paul Irish <paulirish@chromium.org>
Auto-Submit: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -22,6 +22,7 @@ copy_to_gen("traces") {
     "cls-single-frame.json.gz",
     "crux.json.gz",
     "dom-size-long.json.gz",
+    "dom-size-overlap.json.gz",
     "dom-size.json.gz",
     "enhanced-traces.json.gz",
     "extension-tracks-and-marks.json.gz",
